cpp_to_python/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> includes using_namespace main_function
Rule 2     includes -> INCLUDE
Rule 3     includes -> empty
Rule 4     using_namespace -> USING NAMESPACE STD SEMICOLON
Rule 5     using_namespace -> empty
Rule 6     main_function -> INT MAIN LPAREN RPAREN block
Rule 7     block -> LBRACE statement_list RBRACE
Rule 8     statement_list -> statement
Rule 9     statement_list -> statement_list statement
Rule 10    statement -> INT ID ASSIGN expression SEMICOLON
Rule 11    statement -> FLOAT ID ASSIGN expression SEMICOLON
Rule 12    statement -> STRING ID ASSIGN STRING_LITERAL SEMICOLON
Rule 13    statement -> ID ASSIGN expression SEMICOLON
Rule 14    statement -> COUT LT LT expression SEMICOLON
Rule 15    statement -> IF LPAREN expression RPAREN statement
Rule 16    statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 17    statement -> WHILE LPAREN expression RPAREN statement
Rule 18    statement -> FOR LPAREN INT ID ASSIGN expression SEMICOLON expression SEMICOLON assignment RPAREN statement
Rule 19    statement -> block
Rule 20    assignment -> ID ASSIGN expression
Rule 21    expression -> expression PLUS expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression MULT expression
Rule 24    expression -> expression DIV expression
Rule 25    expression -> expression MOD expression
Rule 26    expression -> expression LT expression
Rule 27    expression -> expression GT expression
Rule 28    expression -> expression EQ expression
Rule 29    expression -> expression NEQ expression
Rule 30    expression -> NUMBER
Rule 31    expression -> ID
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> STRING_LITERAL
Rule 34    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 10 11 12 13 18 20
COUT                 : 14
DIV                  : 24
ELSE                 : 16
EQ                   : 28
FLOAT                : 11
FOR                  : 18
GT                   : 27
ID                   : 10 11 12 13 18 20 31
IF                   : 15 16
INCLUDE              : 2
INT                  : 6 10 18
LBRACE               : 7
LPAREN               : 6 15 16 17 18 32
LT                   : 14 14 26
MAIN                 : 6
MINUS                : 22
MOD                  : 25
MULT                 : 23
NAMESPACE            : 4
NEQ                  : 29
NUMBER               : 30
PLUS                 : 21
RBRACE               : 7
RPAREN               : 6 15 16 17 18 32
SEMICOLON            : 4 10 11 12 13 14 18 18
STD                  : 4
STRING               : 12
STRING_LITERAL       : 12 33
USING                : 4
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

assignment           : 18
block                : 6 19
empty                : 3 5
expression           : 10 11 13 14 15 16 17 18 18 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 32
includes             : 1
main_function        : 1
program              : 0
statement            : 8 9 15 16 16 17 18
statement_list       : 7 9
using_namespace      : 1

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . includes using_namespace main_function
    (2) includes -> . INCLUDE
    (3) includes -> . empty
    (34) empty -> .

    INCLUDE         shift and go to state 3
    USING           reduce using rule 34 (empty -> .)
    INT             reduce using rule 34 (empty -> .)

    program                        shift and go to state 1
    includes                       shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> includes . using_namespace main_function
    (4) using_namespace -> . USING NAMESPACE STD SEMICOLON
    (5) using_namespace -> . empty
    (34) empty -> .

    USING           shift and go to state 6
    INT             reduce using rule 34 (empty -> .)

    using_namespace                shift and go to state 5
    empty                          shift and go to state 7

state 3

    (2) includes -> INCLUDE .

    USING           reduce using rule 2 (includes -> INCLUDE .)
    INT             reduce using rule 2 (includes -> INCLUDE .)


state 4

    (3) includes -> empty .

    USING           reduce using rule 3 (includes -> empty .)
    INT             reduce using rule 3 (includes -> empty .)


state 5

    (1) program -> includes using_namespace . main_function
    (6) main_function -> . INT MAIN LPAREN RPAREN block

    INT             shift and go to state 9

    main_function                  shift and go to state 8

state 6

    (4) using_namespace -> USING . NAMESPACE STD SEMICOLON

    NAMESPACE       shift and go to state 10


state 7

    (5) using_namespace -> empty .

    INT             reduce using rule 5 (using_namespace -> empty .)


state 8

    (1) program -> includes using_namespace main_function .

    $end            reduce using rule 1 (program -> includes using_namespace main_function .)


state 9

    (6) main_function -> INT . MAIN LPAREN RPAREN block

    MAIN            shift and go to state 11


state 10

    (4) using_namespace -> USING NAMESPACE . STD SEMICOLON

    STD             shift and go to state 12


state 11

    (6) main_function -> INT MAIN . LPAREN RPAREN block

    LPAREN          shift and go to state 13


state 12

    (4) using_namespace -> USING NAMESPACE STD . SEMICOLON

    SEMICOLON       shift and go to state 14


state 13

    (6) main_function -> INT MAIN LPAREN . RPAREN block

    RPAREN          shift and go to state 15


state 14

    (4) using_namespace -> USING NAMESPACE STD SEMICOLON .

    INT             reduce using rule 4 (using_namespace -> USING NAMESPACE STD SEMICOLON .)


state 15

    (6) main_function -> INT MAIN LPAREN RPAREN . block
    (7) block -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 17

    block                          shift and go to state 16

state 16

    (6) main_function -> INT MAIN LPAREN RPAREN block .

    $end            reduce using rule 6 (main_function -> INT MAIN LPAREN RPAREN block .)


state 17

    (7) block -> LBRACE . statement_list RBRACE
    (8) statement_list -> . statement
    (9) statement_list -> . statement_list statement
    (10) statement -> . INT ID ASSIGN expression SEMICOLON
    (11) statement -> . FLOAT ID ASSIGN expression SEMICOLON
    (12) statement -> . STRING ID ASSIGN STRING_LITERAL SEMICOLON
    (13) statement -> . ID ASSIGN expression SEMICOLON
    (14) statement -> . COUT LT LT expression SEMICOLON
    (15) statement -> . IF LPAREN expression RPAREN statement
    (16) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (17) statement -> . WHILE LPAREN expression RPAREN statement
    (18) statement -> . FOR LPAREN INT ID ASSIGN expression SEMICOLON expression SEMICOLON assignment RPAREN statement
    (19) statement -> . block
    (7) block -> . LBRACE statement_list RBRACE

    INT             shift and go to state 20
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23
    ID              shift and go to state 21
    COUT            shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    LBRACE          shift and go to state 17

    statement_list                 shift and go to state 18
    statement                      shift and go to state 19
    block                          shift and go to state 28

state 18

    (7) block -> LBRACE statement_list . RBRACE
    (9) statement_list -> statement_list . statement
    (10) statement -> . INT ID ASSIGN expression SEMICOLON
    (11) statement -> . FLOAT ID ASSIGN expression SEMICOLON
    (12) statement -> . STRING ID ASSIGN STRING_LITERAL SEMICOLON
    (13) statement -> . ID ASSIGN expression SEMICOLON
    (14) statement -> . COUT LT LT expression SEMICOLON
    (15) statement -> . IF LPAREN expression RPAREN statement
    (16) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (17) statement -> . WHILE LPAREN expression RPAREN statement
    (18) statement -> . FOR LPAREN INT ID ASSIGN expression SEMICOLON expression SEMICOLON assignment RPAREN statement
    (19) statement -> . block
    (7) block -> . LBRACE statement_list RBRACE

    RBRACE          shift and go to state 29
    INT             shift and go to state 20
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23
    ID              shift and go to state 21
    COUT            shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    LBRACE          shift and go to state 17

    statement                      shift and go to state 30
    block                          shift and go to state 28

state 19

    (8) statement_list -> statement .

    RBRACE          reduce using rule 8 (statement_list -> statement .)
    INT             reduce using rule 8 (statement_list -> statement .)
    FLOAT           reduce using rule 8 (statement_list -> statement .)
    STRING          reduce using rule 8 (statement_list -> statement .)
    ID              reduce using rule 8 (statement_list -> statement .)
    COUT            reduce using rule 8 (statement_list -> statement .)
    IF              reduce using rule 8 (statement_list -> statement .)
    WHILE           reduce using rule 8 (statement_list -> statement .)
    FOR             reduce using rule 8 (statement_list -> statement .)
    LBRACE          reduce using rule 8 (statement_list -> statement .)


state 20

    (10) statement -> INT . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 31


state 21

    (13) statement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 32


state 22

    (11) statement -> FLOAT . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 33


state 23

    (12) statement -> STRING . ID ASSIGN STRING_LITERAL SEMICOLON

    ID              shift and go to state 34


state 24

    (14) statement -> COUT . LT LT expression SEMICOLON

    LT              shift and go to state 35


state 25

    (15) statement -> IF . LPAREN expression RPAREN statement
    (16) statement -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 36


state 26

    (17) statement -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 37


state 27

    (18) statement -> FOR . LPAREN INT ID ASSIGN expression SEMICOLON expression SEMICOLON assignment RPAREN statement

    LPAREN          shift and go to state 38


state 28

    (19) statement -> block .

    RBRACE          reduce using rule 19 (statement -> block .)
    INT             reduce using rule 19 (statement -> block .)
    FLOAT           reduce using rule 19 (statement -> block .)
    STRING          reduce using rule 19 (statement -> block .)
    ID              reduce using rule 19 (statement -> block .)
    COUT            reduce using rule 19 (statement -> block .)
    IF              reduce using rule 19 (statement -> block .)
    WHILE           reduce using rule 19 (statement -> block .)
    FOR             reduce using rule 19 (statement -> block .)
    LBRACE          reduce using rule 19 (statement -> block .)
    ELSE            reduce using rule 19 (statement -> block .)


state 29

    (7) block -> LBRACE statement_list RBRACE .

    $end            reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    RBRACE          reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    INT             reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    FLOAT           reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    STRING          reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    ID              reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    COUT            reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    IF              reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    WHILE           reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    FOR             reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    LBRACE          reduce using rule 7 (block -> LBRACE statement_list RBRACE .)
    ELSE            reduce using rule 7 (block -> LBRACE statement_list RBRACE .)


state 30

    (9) statement_list -> statement_list statement .

    RBRACE          reduce using rule 9 (statement_list -> statement_list statement .)
    INT             reduce using rule 9 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 9 (statement_list -> statement_list statement .)
    STRING          reduce using rule 9 (statement_list -> statement_list statement .)
    ID              reduce using rule 9 (statement_list -> statement_list statement .)
    COUT            reduce using rule 9 (statement_list -> statement_list statement .)
    IF              reduce using rule 9 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 9 (statement_list -> statement_list statement .)
    FOR             reduce using rule 9 (statement_list -> statement_list statement .)
    LBRACE          reduce using rule 9 (statement_list -> statement_list statement .)


state 31

    (10) statement -> INT ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 39


state 32

    (13) statement -> ID ASSIGN . expression SEMICOLON
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 41

state 33

    (11) statement -> FLOAT ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 45


state 34

    (12) statement -> STRING ID . ASSIGN STRING_LITERAL SEMICOLON

    ASSIGN          shift and go to state 46


state 35

    (14) statement -> COUT LT . LT expression SEMICOLON

    LT              shift and go to state 47


state 36

    (15) statement -> IF LPAREN . expression RPAREN statement
    (16) statement -> IF LPAREN . expression RPAREN statement ELSE statement
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 48

state 37

    (17) statement -> WHILE LPAREN . expression RPAREN statement
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 49

state 38

    (18) statement -> FOR LPAREN . INT ID ASSIGN expression SEMICOLON expression SEMICOLON assignment RPAREN statement

    INT             shift and go to state 50


state 39

    (10) statement -> INT ID ASSIGN . expression SEMICOLON
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 51

state 40

    (31) expression -> ID .

    SEMICOLON       reduce using rule 31 (expression -> ID .)
    PLUS            reduce using rule 31 (expression -> ID .)
    MINUS           reduce using rule 31 (expression -> ID .)
    MULT            reduce using rule 31 (expression -> ID .)
    DIV             reduce using rule 31 (expression -> ID .)
    MOD             reduce using rule 31 (expression -> ID .)
    LT              reduce using rule 31 (expression -> ID .)
    GT              reduce using rule 31 (expression -> ID .)
    EQ              reduce using rule 31 (expression -> ID .)
    NEQ             reduce using rule 31 (expression -> ID .)
    RPAREN          reduce using rule 31 (expression -> ID .)


state 41

    (13) statement -> ID ASSIGN expression . SEMICOLON
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . MULT expression
    (24) expression -> expression . DIV expression
    (25) expression -> expression . MOD expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NEQ expression

    SEMICOLON       shift and go to state 52
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    MULT            shift and go to state 55
    DIV             shift and go to state 56
    MOD             shift and go to state 57
    LT              shift and go to state 58
    GT              shift and go to state 59
    EQ              shift and go to state 60
    NEQ             shift and go to state 61


state 42

    (30) expression -> NUMBER .

    SEMICOLON       reduce using rule 30 (expression -> NUMBER .)
    PLUS            reduce using rule 30 (expression -> NUMBER .)
    MINUS           reduce using rule 30 (expression -> NUMBER .)
    MULT            reduce using rule 30 (expression -> NUMBER .)
    DIV             reduce using rule 30 (expression -> NUMBER .)
    MOD             reduce using rule 30 (expression -> NUMBER .)
    LT              reduce using rule 30 (expression -> NUMBER .)
    GT              reduce using rule 30 (expression -> NUMBER .)
    EQ              reduce using rule 30 (expression -> NUMBER .)
    NEQ             reduce using rule 30 (expression -> NUMBER .)
    RPAREN          reduce using rule 30 (expression -> NUMBER .)


state 43

    (32) expression -> LPAREN . expression RPAREN
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 62

state 44

    (33) expression -> STRING_LITERAL .

    SEMICOLON       reduce using rule 33 (expression -> STRING_LITERAL .)
    PLUS            reduce using rule 33 (expression -> STRING_LITERAL .)
    MINUS           reduce using rule 33 (expression -> STRING_LITERAL .)
    MULT            reduce using rule 33 (expression -> STRING_LITERAL .)
    DIV             reduce using rule 33 (expression -> STRING_LITERAL .)
    MOD             reduce using rule 33 (expression -> STRING_LITERAL .)
    LT              reduce using rule 33 (expression -> STRING_LITERAL .)
    GT              reduce using rule 33 (expression -> STRING_LITERAL .)
    EQ              reduce using rule 33 (expression -> STRING_LITERAL .)
    NEQ             reduce using rule 33 (expression -> STRING_LITERAL .)
    RPAREN          reduce using rule 33 (expression -> STRING_LITERAL .)


state 45

    (11) statement -> FLOAT ID ASSIGN . expression SEMICOLON
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 63

state 46

    (12) statement -> STRING ID ASSIGN . STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift and go to state 64


state 47

    (14) statement -> COUT LT LT . expression SEMICOLON
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 65

state 48

    (15) statement -> IF LPAREN expression . RPAREN statement
    (16) statement -> IF LPAREN expression . RPAREN statement ELSE statement
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . MULT expression
    (24) expression -> expression . DIV expression
    (25) expression -> expression . MOD expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NEQ expression

    RPAREN          shift and go to state 66
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    MULT            shift and go to state 55
    DIV             shift and go to state 56
    MOD             shift and go to state 57
    LT              shift and go to state 58
    GT              shift and go to state 59
    EQ              shift and go to state 60
    NEQ             shift and go to state 61


state 49

    (17) statement -> WHILE LPAREN expression . RPAREN statement
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . MULT expression
    (24) expression -> expression . DIV expression
    (25) expression -> expression . MOD expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NEQ expression

    RPAREN          shift and go to state 67
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    MULT            shift and go to state 55
    DIV             shift and go to state 56
    MOD             shift and go to state 57
    LT              shift and go to state 58
    GT              shift and go to state 59
    EQ              shift and go to state 60
    NEQ             shift and go to state 61


state 50

    (18) statement -> FOR LPAREN INT . ID ASSIGN expression SEMICOLON expression SEMICOLON assignment RPAREN statement

    ID              shift and go to state 68


state 51

    (10) statement -> INT ID ASSIGN expression . SEMICOLON
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . MULT expression
    (24) expression -> expression . DIV expression
    (25) expression -> expression . MOD expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NEQ expression

    SEMICOLON       shift and go to state 69
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    MULT            shift and go to state 55
    DIV             shift and go to state 56
    MOD             shift and go to state 57
    LT              shift and go to state 58
    GT              shift and go to state 59
    EQ              shift and go to state 60
    NEQ             shift and go to state 61


state 52

    (13) statement -> ID ASSIGN expression SEMICOLON .

    RBRACE          reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    INT             reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    FLOAT           reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    STRING          reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    COUT            reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    WHILE           reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    FOR             reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    LBRACE          reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)
    ELSE            reduce using rule 13 (statement -> ID ASSIGN expression SEMICOLON .)


state 53

    (21) expression -> expression PLUS . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 70

state 54

    (22) expression -> expression MINUS . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 71

state 55

    (23) expression -> expression MULT . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 72

state 56

    (24) expression -> expression DIV . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 73

state 57

    (25) expression -> expression MOD . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 74

state 58

    (26) expression -> expression LT . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MULT expression
    (24) expression -> . expression DIV expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . STRING_LITERAL

    NUMBER          shift and go to state 42
    ID              shift and go to state 40
    LPAREN          shift and go to state 43
    STRING_LITERAL  shift and go to state 44

    expression                     shift and go to state 75

state 59
